# olimex-std32-h405-rust

./: Cargo.toml  add-toolchain-to-path.sh  memory.x  openocd.cfg  rust-arm-none-eabi-gdb-py
.cargo/: config
